Continued the implementation of emails and related services

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -148,9 +148,11 @@ user.address.label=Address
 user.city.label=City
 user.country.label=Country
 user.language.label=Language
-user.password.label=Password
-user.passwordAgain.label=Password again
+user.password.label=Current password
+user.newPassword.label=New password
+user.newPasswordAgain.label=New password again
 user.password.nomatch=The passwords are not equal
+user.password.incorrect=The password is incorrect
 user.phone.label=Phone
 user.fax.label=Fax
 user.mobile.label=Mobile phone
@@ -158,6 +160,8 @@ user.organisation.label=Organisation
 user.department.label=Department
 user.extraInfo.label=Extra information
 user.dateAdded.label=Date added
+user.personalInfo.label=Personal information
+user.changePassword.label=Change password
 
 # Event related messages
 event.label=Event
@@ -300,13 +304,15 @@ emailCode.groovyScript.label=Groovy script
 # Email code related messages
 emailTemplate.label=Email template
 emailTemplate.multiple.label=Email templates
-emailTemplate.usedBy.label=Used by
+emailTemplate.description.label=Description
 emailTemplate.subject.label=Subject
 emailTemplate.body.label=Body
 emailTemplate.sender.label=Sender
 emailTemplate.comment.label=Comment
+emailTemplate.sortOrder.label=Sort order
 emailTemplate.testEmail.label=Send test email to
 emailTemplate.testAfterSave.label=Test email after save
 
 # Other relevant messages
 email.label=E-mail
+email.background.message=Email for {0} participant(s) is being processed in the background, you can continue with your work
