--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -146,9 +146,11 @@ user.address.label=Adres
 user.city.label=Stad
 user.country.label=Land
 user.language.label=Taal
-user.password.label=Wachtwoord
-user.passwordAgain.label=Wachtwoord nogmaals
-user.password.nomatch=De wachtwoorden zijn niet hetzelfde.
+user.password.label=Huidige wachtwoord
+user.newPassword.label=Nieuwe wachtwoord
+user.newPasswordAgain.label=Nieuwe wachtwoord nogmaals
+user.password.nomatch=De wachtwoorden zijn niet hetzelfde
+user.password.incorrect=Het wachtwoord is incorrect
 user.phone.label=Telefoon
 user.fax.label=Fax
 user.mobile.label=Mobiel nummer
@@ -156,6 +158,8 @@ user.organisation.label=Organisatie
 user.department.label=Afdeling
 user.extraInfo.label=Extra informatie
 user.dateAdded.label=Datum toegevoegd
+user.personalInfo.label=Persoonlijke informatie
+user.changePassword.label=Wijzig wachtwoord
 
 # Event related messages
 event.label=Evenement
@@ -299,13 +303,15 @@ emailCode.groovyScript.label=Groovy script
 # Email code related messages
 emailTemplate.label=E-mail sjabloon
 emailTemplate.multiple.label=E-mail sjablonen
-emailTemplate.usedBy.label=Gebruikt door
+emailTemplate.description.label=Beschrijving
 emailTemplate.subject.label=Onderwerp
 emailTemplate.body.label=Bericht
 emailTemplate.sender.label=Afzender
 emailTemplate.comment.label=Commentaar
+emailTemplate.sortOrder.label=Sorteer volgorde
 emailTemplate.testEmail.label=Verstuur test e-mail naar
 emailTemplate.testAfterSave.label=Na opslaan e-mail testen
 
 # Other relevant messages
 email.label=E-mail
+email.background.message=Email voor {0} deelnemer(s) worden in de achtergrond verwerkt, u kunt door gaan met uw werk
