A small improvement made and some new tests created

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -23,7 +23,7 @@ default.count=Teller
 default.goto=Ga naar
 default.date.format=d MMMMM yyyy
 default.date.form.format=dd-MM-yyyy
-default.date.day.format=EEEEE dd MMMMM
+default.date.day.format=EEE dd MMM
 default.number.format=0
 
 default.created.message={0} is ingevoerd
