Lots of bug fixes, authorization pages included

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -25,6 +25,8 @@ default.date.format=MMMMM d yyyy
 default.date.form.format=MM/dd/yyyy
 default.date.day.format=EEE MMM dd
 default.number.format=0
+default.access.denied=Denied
+default.access.not.denied=Not denied
 
 default.created.message={0} is created
 default.updated.message={0} is updated
@@ -45,6 +47,7 @@ default.welcome.label=Welcome
 default.all.label=All
 default.list.label={0} list
 default.add.label=Add {0}
+default.delete.label=Delete {0}
 default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
@@ -294,6 +297,7 @@ paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
+paper.validation.max.message=You exceeded the maximum number of papers allowed per participant
 
 # Email code related messages
 emailCode.label=Email code
@@ -314,6 +318,19 @@ emailTemplate.sortOrder.label=Sort order
 emailTemplate.testEmail.label=Send test email to
 emailTemplate.testAfterSave.label=Test email after save
 
-# Other relevant messages
+# Group related messages
+group.label=Group
+group.multiple.label=Authorization groups
+group.name.label=Name
+
+# Page related messages
+page.label=Page
+page.multiple.label=Pages
+
+# Role related messages
+role.label=Role
+role.multiple.label=Roles
+
+# Email related messages
 email.label=E-mail
 email.background.message=Email for {0} participant(s) is being processed in the background, you can continue with your work
