--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -25,6 +25,8 @@ default.date.format=d MMMMM yyyy
 default.date.form.format=dd-MM-yyyy
 default.date.day.format=EEE dd MMM
 default.number.format=0
+default.access.denied=Geen toegang
+default.access.not.denied=Toegang
 
 default.created.message={0} is ingevoerd
 default.updated.message={0} is gewijzigd
@@ -45,6 +47,7 @@ default.welcome.label=Welkom
 default.all.label=All
 default.list.label={0} lijst
 default.add.label=Voeg {0} toe
+default.delete.label=Verwijder {0}
 default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
 default.show.label=Details {0}
@@ -293,6 +296,7 @@ paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
+paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
 
 # Email code related messages
 emailCode.label=E-mail code
@@ -313,6 +317,19 @@ emailTemplate.sortOrder.label=Sorteer volgorde
 emailTemplate.testEmail.label=Verstuur test e-mail naar
 emailTemplate.testAfterSave.label=Na opslaan e-mail testen
 
-# Other relevant messages
+# Group related messages
+group.label=Groep
+group.multiple.label=Autorisatie groepen
+group.name.label=Naam
+
+# Page related messages
+page.label=Pagina
+page.multiple.label=Pagina's
+
+# Role related messages
+role.label=Rol
+role.multiple.label=Rollen
+
+# Email related messages
 email.label=E-mail
 email.background.message=Email voor {0} deelnemer(s) worden in de achtergrond verwerkt, u kunt door gaan met uw werk
