--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -37,6 +37,8 @@ default.no.id.message=Please provide an id
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving was successful
 default.not.allowed.message=Unfortunately this is not allowed
+default.does.not.exist=This page does not exist
+default.does.not.exist.message=Unfortunatly, this page does not exist
 
 default.search.empty.message=No items to display
 default.search.nothing.found.message=Nothing found
@@ -57,6 +59,8 @@ default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.drag.label=Plan {0} (Drag)
 default.plan.click.label=Plan {0} (Click)
+default.edit.menu.label=Edit menu
+default.admin.menu.label=Admin menu
 
 default.enabled.label=Visible
 default.deleted.label=Delete
