--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -37,6 +37,8 @@ default.no.id.message=Geef astublieft een id op
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 default.successful.message=Opslaan was succesvol
 default.not.allowed.message=Helaas is dit niet toegestaan
+default.does.not.exist=Deze pagina bestaat niet
+default.does.not.exist.message=Helaas bestaat deze pagina niet
 
 default.search.empty.message=Geen items om weer te geven
 default.search.nothing.found.message=Niks gevonden
@@ -57,6 +59,8 @@ default.load.label=Laad {0}
 default.overview.label={0} overzicht
 default.plan.drag.label=Plan {0} (Sleep)
 default.plan.click.label=Plan {0} (Klik)
+default.edit.menu.label=Wijzigingen menu
+default.admin.menu.label=Admin menu
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
