Authorization and deletion update

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,6 +60,7 @@ default.load.label=Load {0}
 default.plan.drag.label=Plan {0} (Drag)
 default.plan.click.label=Plan {0} (Click)
 default.edit.menu.label=Edit menu
+default.overview.menu.label=Overviews menu
 default.admin.menu.label=Admin menu
 
 default.enabled.label=Visible
