--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -60,6 +60,7 @@ default.overview.label={0} overzicht
 default.plan.drag.label=Plan {0} (Sleep)
 default.plan.click.label=Plan {0} (Klik)
 default.edit.menu.label=Wijzigingen menu
+default.overview.menu.label=Overzichten menu
 default.admin.menu.label=Admin menu
 
 default.enabled.label=Zichtbaar
