Menu, authorization and structure update

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -27,6 +27,8 @@ default.date.day.format=EEE MMM dd
 default.number.format=0
 default.access.denied=Denied
 default.access.not.denied=Not denied
+default.export.data=Export data
+default.filter.on=Filter on {0}
 
 default.created.message={0} is created
 default.updated.message={0} is updated
@@ -280,7 +282,8 @@ participantDate.attendance.label=Attendance
 participantDate.volunteering.label=Volunteering
 participantDate.volunteering.select.label=Would like to be
 participantDate.volunteering.add.label=as volunteer
-participantDate.would.like.to.add.message=This user is not registered for {0}. Would you like to add this user as a participant?
+participantDate.not.yet.registered.message=This user is not registered for "{0}".
+participantDate.would.like.to.add.message=Would you like to add this user as a participant?
 
 # Extra related messages
 extra.label=Extra
@@ -320,6 +323,7 @@ emailTemplate.body.label=Body
 emailTemplate.sender.label=Sender
 emailTemplate.comment.label=Comment
 emailTemplate.sortOrder.label=Sort order
+emailTemplate.showInBackend.label=Show in backend
 emailTemplate.testEmail.label=Send test email to
 emailTemplate.testAfterSave.label=Test email after save
 
