--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -27,6 +27,8 @@ default.date.day.format=EEE dd MMM
 default.number.format=0
 default.access.denied=Geen toegang
 default.access.not.denied=Toegang
+default.export.data=Export data
+default.filter.on=Filter op {0}
 
 default.created.message={0} is ingevoerd
 default.updated.message={0} is gewijzigd
@@ -180,14 +182,14 @@ event.longName.label=Lange naam
 event.type.label=Type
 
 # Event date related messages
-eventdate.label=Evenement datum
-eventdate.multiple.label=Data
-eventdate.yearCode.label=Jaar code
-eventdate.startDate.label=Start datum
-eventdate.endDate.label=Eind datum
-eventdate.dateAsText.label=Datum als tekst
-eventdate.description.label=Beschrijving
-eventdate.longDescription.label=Lange beschrijving
+eventDate.label=Evenement datum
+eventDate.multiple.label=Data
+eventDate.yearCode.label=Jaar code
+eventDate.startDate.label=Start datum
+eventDate.endDate.label=Eind datum
+eventDate.dateAsText.label=Datum als tekst
+eventDate.description.label=Beschrijving
+eventDate.longDescription.label=Lange beschrijving
 
 # Day related messages
 day.label=Dag
@@ -279,7 +281,8 @@ participantDate.attendance.label=Aaanwezigheid
 participantDate.volunteering.label=Vrijwilliger mogelijkheden
 participantDate.volunteering.select.label=Zou willen zijn
 participantDate.volunteering.add.label=als vrijwilliger
-participantData.would.like.to.add.message=Deze gebruiker is nog niet geregistreerd voor {0}. Wilt u deze gebruiker als deelnemer toevoegen?
+participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
+participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
 
 # Extra related messages
 extra.label=Extra
@@ -319,6 +322,7 @@ emailTemplate.body.label=Bericht
 emailTemplate.sender.label=Afzender
 emailTemplate.comment.label=Commentaar
 emailTemplate.sortOrder.label=Sorteer volgorde
+emailTemplate.showInBackend.label=Tonen in backend
 emailTemplate.testEmail.label=Verstuur test e-mail naar
 emailTemplate.testAfterSave.label=Na opslaan e-mail testen
 
