Fixed small message error in page builder

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -28,7 +28,7 @@ default.number.format=0
 default.access.denied=Denied
 default.access.not.denied=Not denied
 default.export.data=Export data
-default.filter.on=Filter on {0}
+default.filter.on=Filter on
 
 default.created.message={0} is created
 default.updated.message={0} is updated
