--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -28,7 +28,7 @@ default.number.format=0
 default.access.denied=Geen toegang
 default.access.not.denied=Toegang
 default.export.data=Export data
-default.filter.on=Filter op {0}
+default.filter.on=Filter op
 
 default.created.message={0} is ingevoerd
 default.updated.message={0} is gewijzigd
