For some domain classes, dynamic pages were still missing

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -285,10 +285,22 @@ participantDate.volunteering.add.label=as volunteer
 participantDate.not.yet.registered.message=This user is not registered for "{0}".
 participantDate.would.like.to.add.message=Would you like to add this user as a participant?
 
+# Participant type related messages
+participantType.label=Participant type
+participantType.multiple.label=Participant types
+participantType.type.label=Type
+participantType.withPaper.label=With paper
+participantType.importance.label=Importance
+
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
 extra.extra.label=Extra
+
+# Volunteering related messages
+volunteering.label=Volunteering job
+volunteering.multiple.label=Volunteering
+volunteering.description.label=Description
 
 # Paper related messages
 paper.label=Paper
@@ -306,6 +318,17 @@ paper.file.upload.label=Upload paper
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
 paper.validation.max.message=You exceeded the maximum number of papers allowed per participant
+
+# Paper state related messages
+paperState.label=Paper state
+paperState.multiple.label=Paper states
+paperState.description.label=Description
+
+# Session date/time related messages
+sessionDateTime.label=Date/time
+sessionDateTime.multiple.label=Dates/times
+sessionDateTime.index.label=Index
+sessionDateTime.period.label=Period
 
 # Email code related messages
 emailCode.label=Email code
