--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -284,10 +284,22 @@ participantDate.volunteering.add.label=als vrijwilliger
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
 participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
 
+# Participant type related messages
+participantType.label=Deelnemer type
+participantType.multiple.label=Deelnemer types
+participantType.type.label=Type
+participantType.withPaper.label=Met document
+participantType.importance.label=Belangrijkheid
+
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
 extra.extra.label=Extra
+
+# Volunteering related messages
+volunteering.label=Vrijwilligers werk
+volunteering.multiple.label=Vrijwilligers
+volunteering.description.label=Beschrijving
 
 # Paper related messages
 paper.label=Document
@@ -300,11 +312,22 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Ge\u00c3\u00bcploade document
+paper.file.label=Geüploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
 paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
+
+# Paper state related messages
+paperState.label=Document status
+paperState.multiple.label=Document statussen
+paperState.description.label=Beschrijving
+
+# Session date/time related messages
+sessionDateTime.label=Datum/tijd
+sessionDateTime.multiple.label=Data/tijden
+sessionDateTime.index.label=Index
+sessionDateTime.period.label=Periode
 
 # Email code related messages
 emailCode.label=E-mail code
