--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -29,6 +29,7 @@ default.access.denied=Denied
 default.access.not.denied=Not denied
 default.export.data=Export data
 default.filter.on=Filter on
+default.last.updated=Last updated
 
 default.created.message={0} is created
 default.updated.message={0} is updated
