--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -29,6 +29,7 @@ default.access.denied=Geen toegang
 default.access.not.denied=Toegang
 default.export.data=Export data
 default.filter.on=Filter op
+default.last.updated=Laatste update
 
 default.created.message={0} is ingevoerd
 default.updated.message={0} is gewijzigd
@@ -312,7 +313,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Geüploade document
+paper.file.label=GeÃ¼ploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
