Bugs solved / documentation / clean up of sessions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,8 +60,7 @@ default.edit.label=Edit {0}
 default.overview.label={0} overview
 default.send.label=Send {0}
 default.load.label=Load {0}
-default.plan.drag.label=Plan {0} (Drag)
-default.plan.click.label=Plan {0} (Click)
+default.plan.label=Plan {0}
 default.edit.menu.label=Edit menu
 default.overview.menu.label=Overviews menu
 default.admin.menu.label=Admin menu
