--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -60,8 +60,7 @@ default.edit.label=Wijzig {0}
 default.send.label=Verstuur {0}
 default.load.label=Laad {0}
 default.overview.label={0} overzicht
-default.plan.drag.label=Plan {0} (Sleep)
-default.plan.click.label=Plan {0} (Klik)
+default.plan.label=Plan {0} (Klik)
 default.edit.menu.label=Wijzigingen menu
 default.overview.menu.label=Overzichten menu
 default.admin.menu.label=Admin menu
