--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -256,6 +256,7 @@ feeAmount.numDaysStart.label=Nr of days start
 feeAmount.numDaysEnd.label=Nr of days end
 feeAmount.numDays.label=Nr of days
 feeAmount.feeAmount.label=Fee amount
+feeAmount.validation.max.message=You exceeded the maximum number of days possible
 
 # Participant state related messages
 participantState.label=Participant state
