--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -255,6 +255,7 @@ feeAmount.numDaysStart.label=Aantal dagen start
 feeAmount.numDaysEnd.label=Aantal dagen eind
 feeAmount.numDays.label=Aantal dagen
 feeAmount.feeAmount.label=Vergoedings bedrag
+feeAmount.validation.max.message=U heeft het mogelijke maximum aantal dagen overschreden
 
 # Participant state related messages
 participantState.label=Deelnemer status
