--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -55,9 +55,8 @@ default.add.label=Add {0}
 default.delete.label=Delete {0}
 default.new.label=New {0}
 default.create.label=Create {0}
-default.show.label=Show {0}
-default.edit.label=Edit {0}
-default.overview.label={0} overview
+default.edit.label={0} (Edit)
+default.overview.label={0}
 default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
@@ -107,7 +106,7 @@ springSecurity.login.header=Please Login
 springSecurity.login.button=Login
 springSecurity.login.username.label=Login
 springSecurity.login.password.label=Password
-springSecurity.login.reset=Lost password (reset)
+springSecurity.login.reset=Lost password
 springSecurity.login.remember.me.label=Remember me
 
 # Forgot password page
@@ -118,6 +117,8 @@ springSecurity.forgot.username.label=Login
 springSecurity.forgot.error=Sorry, we couldn't create a new password for you at this moment
 springSecurity.forgot.fail=Sorry. we were not able to find a user with that login
 springSecurity.forgot.success=A new password has been send to you by mail
+springSecurity.forgot.code.request=An email with further instructions has been send to you by mail
+springSecurity.forgot.code.incorrect=The code is incorrect, please request a new code
 
 # Denied Page
 springSecurity.denied.title=Denied
