--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -55,11 +55,10 @@ default.add.label=Voeg {0} toe
 default.delete.label=Verwijder {0}
 default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
-default.show.label=Details {0}
-default.edit.label=Wijzig {0}
+default.edit.label={0} (Wijzigen)
 default.send.label=Verstuur {0}
 default.load.label=Laad {0}
-default.overview.label={0} overzicht
+default.overview.label={0}
 default.plan.label=Plan {0} (Klik)
 default.edit.menu.label=Wijzigingen menu
 default.overview.menu.label=Overzichten menu
@@ -105,7 +104,7 @@ springSecurity.login.header=Login astublieft
 springSecurity.login.button=Login
 springSecurity.login.username.label=Login
 springSecurity.login.password.label=Wachtwoord
-springSecurity.login.reset=Wachtwoord vergeten (reset)
+springSecurity.login.reset=Wachtwoord vergeten
 springSecurity.login.remember.me.label=Remember me
 
 # Forgot password page
@@ -116,6 +115,8 @@ springSecurity.forgot.username.label=Login
 springSecurity.forgot.error=Sorry, we konden geen nieuw wachtwoord voor u aanmaken op dit moment
 springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login
 springSecurity.forgot.success=Een nieuw wachtwoord is naar u gemaild
+springSecurity.forgot.code.request=Een mail met verdere instructies is naar u gemaild
+springSecurity.forgot.code.incorrect=De code is niet correct, vraag astublieft een nieuwe code aan
 
 # Denied Page
 springSecurity.denied.title=Geen toegang
