--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -29,19 +29,21 @@ default.access.denied=Denied
 default.access.not.denied=Not denied
 default.export.data=Export data
 default.filter.on=Filter on
+default.totals.filtered=Total (with filters)
+default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
 
-default.created.message={0} is created
-default.updated.message={0} is updated
-default.deleted.message={0} is deleted
-default.not.deleted.message={0} could not be deleted
+default.created.message={0} "{1}" is created
+default.updated.message={0} "{1}" is updated
+default.deleted.message={0} "{1}" is deleted
+default.not.deleted.message={0} "{1}" could not be deleted
 default.not.found.message={0} could not be found
 default.no.id.message=Please provide an id
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
-default.successful.message=Saving was successful
+default.successful.message=Saving of "{0}" was successful
 default.not.allowed.message=Unfortunately this is not allowed
 default.does.not.exist=This page does not exist
-default.does.not.exist.message=Unfortunatly, this page does not exist
+default.does.not.exist.message=Unfortunately this page does not exist
 
 default.search.empty.message=No items to display
 default.search.nothing.found.message=Nothing found
