--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -29,16 +29,18 @@ default.access.denied=Geen toegang
 default.access.not.denied=Toegang
 default.export.data=Export data
 default.filter.on=Filter op
+default.totals.filtered=Totaal (met filters)
+default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
 
-default.created.message={0} is ingevoerd
-default.updated.message={0} is gewijzigd
-default.deleted.message={0} is verwijderd
-default.not.deleted.message={0} kon niet worden verwijderd
+default.created.message={0} "{1}" is ingevoerd
+default.updated.message={0} "{1}" is gewijzigd
+default.deleted.message={0} "{1}" is verwijderd
+default.not.deleted.message={0} "{1}" kon niet worden verwijderd
 default.not.found.message={0} kon niet worden gevonden
 default.no.id.message=Geef astublieft een id op
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
-default.successful.message=Opslaan was succesvol
+default.successful.message=Opslaan van "{0}" was succesvol
 default.not.allowed.message=Helaas is dit niet toegestaan
 default.does.not.exist=Deze pagina bestaat niet
 default.does.not.exist.message=Helaas bestaat deze pagina niet
