Some small bug fixes

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -32,6 +32,7 @@ default.filter.on=Filter on
 default.totals.filtered=Total (with filters)
 default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
+default.back.to.top=Back to top
 
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
