--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -32,6 +32,7 @@ default.filter.on=Filter op
 default.totals.filtered=Totaal (met filters)
 default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
+default.back.to.top=Terug naar de top
 
 default.created.message={0} "{1}" is ingevoerd
 default.updated.message={0} "{1}" is gewijzigd
@@ -254,10 +255,10 @@ feeState.isDefaultFee.label=Is standaard vergoeding
 feeAmount.label=Vergoedings bedrag
 feeAmount.multiple.label=Vergoedings bedragen
 feeAmount.endDate.label=Eind datum
-feeAmount.numDaysStart.label=Aantal dagen start
-feeAmount.numDaysEnd.label=Aantal dagen eind
+feeAmount.numDaysStart.label=Nr. dagen start
+feeAmount.numDaysEnd.label=Nr. dagen eind
 feeAmount.numDays.label=Aantal dagen
-feeAmount.feeAmount.label=Vergoedings bedrag
+feeAmount.feeAmount.label=Bedrag
 feeAmount.validation.max.message=U heeft het mogelijke maximum aantal dagen overschreden
 
 # Participant state related messages
