Updated session with new field 'abstract' and participant_date with new fields 'lower_fee_text', 'student', 'student_confirmed' and 'award'.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -243,6 +243,7 @@ session.label=Session
 session.multiple.label=Sessions
 session.code.label=Code
 session.name.label=Name
+session.abstr.label=Abstract
 session.comment.label=Comment
 session.sessionParticipants.label=Participants in session
 
@@ -279,7 +280,11 @@ participantDate.inventationLetter.label=Inventation letter
 participantDate.lowerFeeRequested.label=Requested
 participantDate.lowerFeeAnswered.label=Answered
 participantDate.lowerFee.label=Lower fee
-participantDate.lowerFeeText.label=Lower fee text
+participantDate.lowerFeeText.label=Description
+participantDate.student.label=Student
+participantDate.studentRequested.label=Requested
+participantDate.studentConfirmed.label=Confirmed
+participantDate.award.label=Participate for award
 participantDate.registration.info.label=Registration info
 participantDate.personal.info.label=Personal info
 participantDate.extra.label=Extra
