--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -242,6 +242,7 @@ session.label=Sessie
 session.multiple.label=Sessies
 session.code.label=Code
 session.name.label=Naam
+session.abstr.label=Abstract
 session.comment.label=Commentaar
 session.sessionParticipants.label=Deelnemers in sessie
 
@@ -278,7 +279,11 @@ participantDate.inventationLetter.label=Uitnodigings brief
 participantDate.lowerFeeRequested.label=Aangevraagd
 participantDate.lowerFeeAnswered.label=Beantwoord
 participantDate.lowerFee.label=Lagere vergoeding
-participantDate.lowerFeeText.label=Lagere vergoeding tekst
+participantDate.lowerFeeText.label=Beschrijving
+participantDate.student.label=Student
+participantDate.studentRequested.label=Aangevraagd
+participantDate.studentConfirmed.label=Bevestigd
+participantDate.award.label=Deelname voor award
 participantDate.registration.info.label=Registratie info
 participantDate.personal.info.label=Persoonlijke info
 participantDate.extra.label=Extra
