- Bugs solved: 105, 117, 130 and 131 - Some other minor issues solved

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -111,6 +111,7 @@ springSecurity.login.username.label=Login
 springSecurity.login.password.label=Password
 springSecurity.login.reset=Lost password
 springSecurity.login.remember.me.label=Remember me
+springSecurity.login.lost.password=If you have lost your password, please go to:
 
 # Forgot password page
 springSecurity.forgot.title=Forgot password
@@ -201,6 +202,7 @@ day.label=Day
 day.multiple.label=Days
 day.day.label=Day
 day.dayNumber.label=Day number
+day.validation.between.message=The days do not fall within the range "{3}" and "{4}"
 
 # Network related messages
 network.label=Network
