--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -109,6 +109,7 @@ springSecurity.login.username.label=Login
 springSecurity.login.password.label=Wachtwoord
 springSecurity.login.reset=Wachtwoord vergeten
 springSecurity.login.remember.me.label=Remember me
+springSecurity.login.lost.password=Als u uw wachtwoord bent vergeten, vraag dan een nieuw wachtwoord aan:
 
 # Forgot password page
 springSecurity.forgot.title=Wachtwoord vergeten
@@ -200,6 +201,7 @@ day.label=Dag
 day.multiple.label=Dagen
 day.day.label=Dag
 day.dayNumber.label=Dag nummer
+day.validation.between.message=De dagen vallen niet binnen het bereik van "{3}" en "{4}"
 
 # Network related messages
 network.label=Netwerk
@@ -322,7 +324,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Geüploade document
+paper.file.label=Ge\u00fcploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
