Fixed character encoding in i18n files

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -324,7 +324,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Ge\u00fcploade document
+paper.file.label=Geüploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
