- Application now remembers the state of the menu and tabs (#136) - Application now contains an email service test page: ./$event/$date/email/test (#132)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -377,4 +377,12 @@ role.multiple.label=Roles
 
 # Email related messages
 email.label=E-mail
-email.background.message=Email for {0} participant(s) is being processed in the background, you can continue with your work
+email.from.label=From
+email.to.label=To
+email.subject.label=Subject
+email.body.label=Body
+email.info.label=Returned info:
+email.test.label=Test e-mail service
+email.send.label=Send e-mail
+email.send.multiple.label=Send e-mails
+email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
