--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -324,7 +324,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Geüploade document
+paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
@@ -376,4 +376,12 @@ role.multiple.label=Rollen
 
 # Email related messages
 email.label=E-mail
-email.background.message=Email voor {0} deelnemer(s) worden in de achtergrond verwerkt, u kunt door gaan met uw werk
+email.from.label=Van
+email.to.label=Aan
+email.subject.label=Onderwerp
+email.body.label=Bericht
+email.info.label=Geretourneerde info:
+email.test.label=Test e-mail service
+email.send.label=Verstuur e-mail
+email.send.multiple.label=Verstuur e-mails
+email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
