--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -93,8 +93,6 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-spinner.alt=Loading...
-
 ## Security related messages
 # Login errors
 springSecurity.errors.login.expired=Sorry, your account has expired
@@ -182,6 +180,7 @@ user.changePassword.label=Change password
 # Event related messages
 event.label=Event
 event.multiple.label=Events
+event.list=Available events
 event.code.label=Code
 event.shortName.label=Short name
 event.longName.label=Long name
@@ -382,7 +381,7 @@ email.to.label=To
 email.subject.label=Subject
 email.body.label=Body
 email.info.label=Returned info:
-email.test.label=Test e-mail service
+email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
 email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
