--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -381,7 +381,7 @@ email.to.label=Aan
 email.subject.label=Onderwerp
 email.body.label=Bericht
 email.info.label=Geretourneerde info:
-email.test.label=Test e-mail service
+email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
 email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
