#146: Extra submit button (Submit & Close), moved delete button #144: Event date page is now properly redirected when moving between events

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -74,6 +74,7 @@ default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.save.label=Save
+default.button.save.close.label=Save & Close
 default.button.cancel.label=Cancel
 default.button.delete.label=Delete
 default.button.back.label=Back
