--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -75,6 +75,7 @@ default.button.edit.label=Wijzigen
 default.button.update.label=Update
 default.button.delete.label=Verwijderen
 default.button.save.label=Opslaan
+default.button.save.close.label=Opslaan & Sluiten
 default.button.cancel.label=Annuleren
 default.button.back.label=Terug
 default.button.search.label=Zoeken
