Added comma to dates in the English version of the participant page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -21,7 +21,7 @@ default.boolean.true=True
 default.boolean.false=False
 default.count=Count
 default.goto=Go to
-default.date.format=MMMMM d yyyy
+default.date.format=MMMMM d, yyyy
 default.date.form.format=MM/dd/yyyy
 default.date.day.format=EEE MMM dd
 default.number.format=0
