--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -21,7 +21,7 @@ default.boolean.true=Ja
 default.boolean.false=Nee
 default.count=Teller
 default.goto=Ga naar
-default.date.format=d MMMMM yyyy
+default.date.format=EEE d MMMMM yyyy
 default.date.form.format=dd-MM-yyyy
 default.date.day.format=EEE dd MMM
 default.number.format=0
