#161: Modified student checkbox label

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -284,7 +284,7 @@ participantDate.lowerFeeAnswered.label=Answered
 participantDate.lowerFee.label=Lower fee
 participantDate.lowerFeeText.label=Description
 participantDate.student.label=Student
-participantDate.studentRequested.label=Requested
+participantDate.studentRequested.label=Is student?
 participantDate.studentConfirmed.label=Confirmed
 participantDate.award.label=Participate for award
 participantDate.registration.info.label=Registration info
