--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -284,7 +284,7 @@ participantDate.lowerFeeAnswered.label=Beantwoord
 participantDate.lowerFee.label=Lagere vergoeding
 participantDate.lowerFeeText.label=Beschrijving
 participantDate.student.label=Student
-participantDate.studentRequested.label=Aangevraagd
+participantDate.studentRequested.label=Is student?
 participantDate.studentConfirmed.label=Bevestigd
 participantDate.award.label=Deelname voor award
 participantDate.registration.info.label=Registratie info
