#163: Changed label of user authorization

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -155,6 +155,7 @@ requestMap.configAttribute.label=Config attribute
 # User related messages
 user.label=User
 user.multiple.label=Users
+user.auth.label=User authorization
 user.email.label=Email
 user.lastName.label=Last name
 user.firstName.label=First name
