--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -155,6 +155,7 @@ requestMap.configAttribute.label=Configuratie waarde
 # User related messages
 user.label=Gebruiker
 user.multiple.label=Gebruikers
+user.auth.label=Gebruiker autorisatie
 user.email.label=Email
 user.lastName.label=Achternaam
 user.firstName.label=Voornaam
