#124/#172: User can now add new participants

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -14,6 +14,7 @@ default.blank.message={0} cannot be blank
 default.not.equal.message={0} with value "{2}" cannot equal "{3}"
 default.null.message={0} cannot be empty
 default.not.unique.message={0} with value "{2}" must be unique
+default.exists.message="{0}" already exists as {1}
 
 default.paginate.prev=Previous
 default.paginate.next=Next
@@ -40,6 +41,7 @@ default.deleted.message={0} "{1}" is deleted
 default.not.deleted.message={0} "{1}" could not be deleted
 default.not.found.message={0} could not be found
 default.no.id.message=Please provide an id
+default.no.email.message=Please provide an email address
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving of "{0}" was successful
 default.not.allowed.message=Unfortunately this is not allowed
