--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -14,6 +14,7 @@ default.blank.message={0} mag niet leeg zijn
 default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
 default.null.message={0} mag niet leeg zijn
 default.not.unique.message={0} met waarde "{2}" moet uniek zijn
+default.exists.message="{0}" bestaat al als {1}
 
 default.paginate.prev=Vorige
 default.paginate.next=Volgende
@@ -40,6 +41,7 @@ default.deleted.message={0} "{1}" is verwijderd
 default.not.deleted.message={0} "{1}" kon niet worden verwijderd
 default.not.found.message={0} kon niet worden gevonden
 default.no.id.message=Geef astublieft een id op
+default.no.email.message=Geef astublieft een emailadres op
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 default.successful.message=Opslaan van "{0}" was succesvol
 default.not.allowed.message=Helaas is dit niet toegestaan
