#171: Added session state

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -250,6 +250,7 @@ session.code.label=Code
 session.name.label=Name
 session.abstr.label=Abstract
 session.comment.label=Comment
+session.state.label=Session state
 session.sessionParticipants.label=Participants in session
 
 # Fee state related messages
