--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -250,6 +250,7 @@ session.code.label=Code
 session.name.label=Naam
 session.abstr.label=Abstract
 session.comment.label=Commentaar
+session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
 
 # Fee state related messages
